# RL-USERS

./: .gitignore  README.md  docker-compose.yml  gen_vocab.py  import_test.py  index.html  package-lock.json  package.json  policy_bc.pt  policy_rl.pt  requirements.txt  simulate.py  simulate_live.py  tailwind.config.js  train.py  visualize.py  vocab.json
agents/: agent.py  bc_trainer.py  funnel.py  rl_trainer.py  scheduler.py  social_graph.py
agents/cpp/: CMakeLists.txt  agent_inference_engine.cpp  funnel_core.cpp  scheduler_core.cpp  social_graph_core.cpp
backend/cart_service/: Dockerfile  main.py
backend/gateway/: Dockerfile  main.py
backend/order_service/: Dockerfile  main.py
backend/product_service/: Dockerfile  main.py
backend/session_service/: Dockerfile  main.py
comms/: kafka_client.py  redis_client.py
data/: graph_builder.py  loader.py  persona_cluster.py
src/: main.jsx  styles.css
validation/: metrics.py
visuals/: dashboard.html  dashboard.jsx  validation_report.json
